public/css/style.css
body{
    font-family: "Plus Jakarta Sans", sans-serif !important;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    overflow-x: hidden;
}

.container{
    flex: 1;
}

a,
a:hover,
a:focus,
a:active{
    text-decoration: none !important;
}

/* Simple Navbar */
.navbar{
    background-color: #ffffff !important;
    border-bottom: 1px solid #e5e7eb;
    padding: 0.8rem 0;
    height: 4.5rem;
}

.navbar-brand{
    font-weight: 600;
    color: #222 !important;
}

.navbar-brand i{
    color: #2E7D32;
    margin-right: 0.3rem;
    font-size: 2rem;
}

.nav-link{
    color: #333 !important;
    margin-right: 0.5rem;
    
}

.nav-link:hover{
    color: #2E7D32 !important;
}

.nav-link.active{
    color: #2E7D32 !important;
}
.collapse ul li{
    font-size:1.1rem;
}

img{
    max-width: 100%;
    height: auto;
}
/*===================================*/
/*Index Page*/
.heading{
    font-size: 2.5rem;
    margin: 1.5rem ;
    color: #2E7D32;
}

.card-text b{
    font-weight: 600;
    font-size: 1.2rem;
}
.show{
    width: 40rem;
    margin: 1rem ;
    border-radius: 10px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.edit,.delete{
    margin-right: 0.5rem;
    margin-left:0.5rem;
}
.card-footer{
    display: flex;
}
.revdel{
    margin: 0.5rem;
}
.rating{
    font-size: 1.4rem;
}
.name{
    font-size: 1.2rem;
    font-weight: 600;
}
.btn-warning{
    margin-left: auto;
}
    

